--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Mindo Futures API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js",
+    "start:dev": "nodemon src/index.js"
   },
   "author": "David R. Bustos",
   "license": "GPL-3.0-or-later",
